# DataInspector

./: inspector
plugin/: CMakeLists.txt  InspectorPlugin.cxx  InspectorPlugin.h.in
proxy/: CMakeLists.txt  Proxy.cpp  looped_task.hpp
test/: advanced-commands.sh  base.sh  basic-commands.sh  basic-teardown.sh  run-all.sh  selection.sh
