CMAKE_MINIMUM_REQUIRED(VERSION 3.7)

PROJECT(Proxy LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

IF (MODULES_DIR)
  SET(ENV{PKG_CONFIG_PATH}
    "${MODULES_DIR}/curl/latest/lib/pkgconfig:${MODULES_DIR}/ZeroMQ/latest/lib/pkgconfig")
ELSE()
  MESSAGE(FATAL_ERROR "Specify MODULES_DIR to the root of modules installation")
ENDIF()

# Dependencies
FIND_PACKAGE(Threads REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED) # Needed for ZeroMQ
PKG_CHECK_MODULES(CURL REQUIRED IMPORTED_TARGET libcurl)
PKG_CHECK_MODULES(ZeroMQ REQUIRED IMPORTED_TARGET libzmq)

# Paths
IF (CURL_FOUND)
  SET(CURL_INCLUDE_DIR ${CURL_INCLUDE_DIRS})
  SET(CURL_LIBRARY_DIR ${CURL_LINK_LIBRARIES})
ENDIF()

IF (ZeroMQ_FOUND)
  SET(ZeroMQ_INCLUDE_DIR ${ZeroMQ_INCLUDE_DIRS})
  SET(ZeroMQ_LIBRARY_DIR ${ZeroMQ_LINK_LIBRARIES})
ENDIF()

# Include directories and libraries
INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}
  ${CURL_INCLUDE_DIR}
  ${ZeroMQ_INCLUDE_DIR})
LINK_LIBRARIES(
  ${CURL_LIBRARY_DIR}
  ${ZeroMQ_LIBRARY_DIR})

ADD_EXECUTABLE(proxy Proxy.cpp)

TARGET_LINK_LIBRARIES(proxy PRIVATE Threads::Threads)
